--- a/src/index.scss
+++ b/src/index.scss
@@ -108,10 +108,16 @@ body {
     height: 100vh;
     width: 100vw;
   }
+  #logo {
+    display: none;
+  }
 }
 @media (max-width: 800px) and (orientation: landscape) {
   #calculatorContainer {
     height: 100vh;
     width: 100vw;
+  }
+  #logo {
+    display: none;
   }
 }
